--- a/ejemplo_clase/marvel/templates/e-commerce/base.html
+++ b/ejemplo_clase/marvel/templates/e-commerce/base.html
@@ -9,6 +9,7 @@
     {% endblock head %}
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'e-commerce/css/base.css' %}">
     <title>{% block title %}Marvel e-commerce{% endblock %}</title>
 </head>
@@ -17,18 +18,20 @@
     <div id="sidebar">
         <img id="logo" src="{% static 'e-commerce/img/marvel.svg' %}" alt="My image" width="15%" height="10%">
         <br>
-        {% block sidebar %}
-        | <a href="/e-commerce/index">Comics</a>
-        {% if user.is_authenticated %}
-        | <a href="/e-commerce/logout">Logout</a>
-        | <a href="/e-commerce/user">User profile</a>
-        | <a href="/e-commerce/cart">Cart</a>
-        | <a href="/e-commerce/wish">Wishes</a>
-        {% else %}
-        | <a href="/e-commerce/login">Login</a>
-        | <a href="/e-commerce/signup">Sign up!</a>
-        {% endif %}
-        {% endblock %}
+        <div class="btn-group mt-2" role="toolbar">
+            {% block sidebar %}
+            <a class="btn btn-outline-secondary" href="/e-commerce/index">Comics</a>
+            {% if user.is_authenticated %}
+            <a class="btn btn-outline-secondary" href="/e-commerce/logout">Logout</a>
+            <a class="btn btn-outline-secondary"" href="/e-commerce/user">User profile</a>
+            <a class="btn btn-outline-secondary" href="/e-commerce/cart">Cart</a>
+            <a class="btn btn-outline-secondary" href="/e-commerce/wish">Wishes</a>
+            {% else %}
+            <a class="btn btn-outline-secondary" href="/e-commerce/login">Login</a>
+            <a class="btn btn-outline-secondary" href="/e-commerce/signup">Sign up!</a>
+            {% endif %}
+            {% endblock %}
+        </div>
     </div>
 
     <div id="content">
@@ -42,6 +45,7 @@
         </div>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
