--- a/ejemplo_clase/marvel/templates/e-commerce/index.html
+++ b/ejemplo_clase/marvel/templates/e-commerce/index.html
@@ -12,11 +12,11 @@
             <a href="detail?marvel_id={{comic.marvel_id}} ">
                 <img class='comic_img' src="{{comic.picture}}" alt="Not found :C">
             </a>
-            <h3>
+            <h4 class="text-light">
                 {{comic.title}}
-            </h3>
+            </h4>
             <div class="price">
-                <p>
+                <p class="h5 text-light-emphasis">
                     Precio: U$S {{comic.price}} -
                     Stock:
                     {% if comic.stock_qty > 0 %}
@@ -32,34 +32,34 @@
 
 <!-- Paginado: -->
 
-<div class="paginator-content">
-    <div class="paginator-item">
+<div class="btn-group mt-2">
+    <div class="">
 
         {% if page_obj.has_previous %}
-        <a class="page-btn" href="?page=1">First ( 1 )</a>
+        <a class="btn btn-outline-danger" href="?page=1">First ( 1 )</a>
         {% endif %}
 
 
     </div>
-    <div class="paginator-item">
+    <div class="">
         {% if page_obj.has_previous %}
-        <a class="page-btn" href="?page={{page_obj.previous_page_number}}"><- Prev</a>
+        <a class="btn btn-outline-danger" href="?page={{page_obj.previous_page_number}}"><- Prev</a>
         {% endif %}
     </div>
-    <div class="paginator-item">
-        <div class="page-btn">
-        <a class="page-btn" href=""> {{page_obj.number}}</a>
+    <div class="">
+        <div class="">
+        <a class="btn btn-outline-danger" href=""> {{page_obj.number}}</a>
 
         </div>
     </div>
-    <div class="paginator-item">
+    <div class="">
         {% if page_obj.has_next %}
-        <a class="page-btn" href="?page={{page_obj.next_page_number}}"> Next -></a>
+        <a class="btn btn-outline-danger" href="?page={{page_obj.next_page_number}}"> Next -></a>
         {% endif %}
     </div>
-    <div class="paginator-item">
+    <div class="">
         {% if page_obj.has_next %}
-        <a class="page-btn" href="?page={{page_obj.paginator.num_pages}}">Last ( {{page_obj.paginator.num_pages}} )</a>
+        <a class="btn btn-outline-danger" href="?page={{page_obj.paginator.num_pages}}">Last ( {{page_obj.paginator.num_pages}} )</a>
         {% endif %}
     </div>
 
