--- a/ejemplo_clase/marvel/templates/e-commerce/login.html
+++ b/ejemplo_clase/marvel/templates/e-commerce/login.html
@@ -5,9 +5,9 @@
 <h1>Login !</h1>
 <form action="{% url 'login' %}" method="POST">{%csrf_token%}
     <label for="username">Username:</label><br>
-    <input type="text" id="username" name="username" value="Leon"><br>
+    <input type="text" id="username" name="username" value=""><br>
     <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" value="Kennedy"><br><br>
+    <input type="password" id="password" name="password" value=""><br><br>
     <input type="submit" value="Enviar">
 </form>
 {% endblock content %}
